--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./asset/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -78,7 +78,7 @@
                     <li class="nav-item dropdown text-secondary">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
-                            <img src="./asset/user-139-removebg-preview.png" width="35px" height="35px" alt=""> User
+                            <img src="user-139-removebg-preview.png" width="35px" height="35px" alt=""> User
                         </a>
                         <ul class="dropdown-menu ">
                             <li><a class="dropdown-item text-secondary" href="#">Dashboard</a></li>
@@ -101,7 +101,7 @@
 
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="./asset/Slider1.jpg" class="d-block w-100" width="auto" height="auto" alt="...">
+                <img src="Slider1.jpg" class="d-block w-100" width="auto" height="auto" alt="...">
                 <div class="carousel-caption d-none d-md-block labelBtn">
                     <!-- <h5>First slide label</h5>
                     <p>Some representative placeholder content for the first slide.</p> -->
@@ -112,14 +112,14 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./asset/Slider1.jpg" class="d-block w-100" alt="...">
+                <img src="Slider1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Second slide label</h5>
                     <p>Some representative placeholder content for the second slide.</p>
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="./asset/Slider1.jpg" class="d-block w-100" alt="...">
+                <img src="Slider1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Third slide label</h5>
                     <p>Some representative placeholder content for the third slide.</p>
@@ -169,7 +169,7 @@
 
         <div class="row">
             <div class="col">
-                <img src="./asset/aboutUs.png" height="475px" alt="">
+                <img src="aboutUs.png" height="475px" alt="">
             </div>
             <div class="col">
                 <h1 class="text-center">About Us</h1>
@@ -199,7 +199,7 @@
                 <div class="container text-center">
                     <div class="row services">
                         <div class="col">
-                            <img src="./asset/e-com.png" width="70px" alt="">
+                            <img src="e-com.png" width="70px" alt="">
                         </div>
                         <div class="col">
                             <h5>E-commerce</h5>
@@ -207,7 +207,7 @@
                     </div>
                     <div class="row services">
                         <div class="col">
-                            <img src="./asset/jobs.png" width="70px" alt="">
+                            <img src="jobs.png" width="70px" alt="">
                         </div>
                         <div class="col">
                             <h5>Jobs</h5>
@@ -215,7 +215,7 @@
                     </div>
                     <div class="row services">
                         <div class="col">
-                            <img src="./asset/edu.png" width="70px" alt="">
+                            <img src="edu.png" width="70px" alt="">
                         </div>
                         <div class="col">
                             <h5>Education</h5>
@@ -223,7 +223,7 @@
                     </div>
                     <div class="row services">
                         <div class="col">
-                            <img src="./asset/worker.png" width="70px" alt="">
+                            <img src="worker.png" width="70px" alt="">
                         </div>
                         <div class="col">
                             <h5>Workforce</h5>
@@ -231,7 +231,7 @@
                     </div>
                     <div class="row services">
                         <div class="col">
-                            <img src="./asset/restraunt.png" width="70px" alt="">
+                            <img src="restraunt.png" width="70px" alt="">
                         </div>
                         <div class="col">
                             <h5>Restaurant</h5>
@@ -240,7 +240,7 @@
                 </div>
             </div>
             <div class="col" style="margin-top: 50px;">
-                <img src="./asset/1.png" width="350px" height="450px" alt="">
+                <img src="1.png" width="350px" height="450px" alt="">
             </div>
 
         </div>
@@ -265,7 +265,7 @@
                         <use xlink:href="#bootstrap"></use>
                     </svg>
                 </a>
-                <img src="./asset/Yellowlogo.png" width="235px" height="70px" alt="">
+                <img src="Yellowlogo.png" width="235px" height="70px" alt="">
             </div>
 
             <div class="col mb-3">
