--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <nav class="navbar navbar-expand-lg bg-light text-secondary sticky-top">
         <div class="container-fluid" style="font-family: 'Barlow', sans-serif;">
             <a class="navbar-brand" href="#">
-                <img src="./asset/lOGO-FINAL-1-1024x303-1.png" alt="" width="235px" height="70px">
+                <img src="lOGO-FINAL-1-1024x303-1.png" alt="" width="235px" height="70px">
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
